--- a/index.html
+++ b/index.html
@@ -1,139 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Brush the Teeth Game</title>
-  <style>
-    html, body {
-      margin: 0;
-      overflow: hidden;
-      background: #000;
-    }
-    canvas {
-      display: block;
-      margin: auto;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minigame Assessment Hub</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Custom styles for Inter font and general body styling */
+        body {
+            font-family: 'Inter', sans-serif;
+            margin: 0;
+            padding: 0;
+            overflow: hidden; /* Prevent scrolling on the main page */
+            background-color: #f0f4f8; /* Light background */
+        }
+        /* Custom styles for the pixel-art like checkbox */
+        .checkbox-square {
+            width: 24px;
+            height: 24px;
+            border: 2px solid #000; /* Black border for pixel art feel */
+            background-color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-shrink: 0; /* Prevent shrinking */
+        }
+        .checkbox-square svg {
+            fill: #22c55e; /* Green checkmark */
+            width: 18px;
+            height: 18px;
+        }
+        /* Styles for the game overlay */
+        .game-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black background */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 1000; /* Ensure it's on top of other content */
+            padding: 2rem; /* Add some padding around the content */
+        }
+        .game-overlay-content {
+            background-color: #ffffff;
+            border-radius: 1rem;
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+            width: 95%; /* Adjust width for responsiveness */
+            max-width: 1200px; /* Max width for larger screens */
+            height: 95%; /* Adjust height for responsiveness */
+            max-height: 800px; /* Max height for larger screens */
+            display: flex;
+            flex-direction: column;
+            overflow: hidden; /* Hide overflow from iframe */
+        }
+        .game-overlay-iframe {
+            width: 100%;
+            flex-grow: 1; /* Allow iframe to take available height */
+            border: none;
+            border-radius: 0.75rem; /* Rounded corners for the iframe */
+            background-color: #f0f4f8; /* Background for the iframe area */
+        }
+        .game-overlay-home-button {
+            margin-top: 1rem;
+            padding: 0.75rem 2rem;
+            background-color: #ef4444; /* Red color for home button */
+            color: white;
+            border-radius: 9999px; /* Fully rounded */
+            font-weight: bold;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+        .game-overlay-home-button:hover {
+            background-color: #dc2626;
+            transform: scale(1.05);
+        }
+    </style>
 </head>
-<body>
-<canvas id="gameCanvas" width="800" height="600"></canvas>
+<body class="flex h-screen items-center justify-center">
+    <div class="w-full max-w-2xl mx-auto p-8 bg-emerald-100 text-gray-800 flex flex-col items-center justify-between shadow-lg rounded-3xl h-full py-12">
+        <div class="w-full bg-white border-4 border-gray-800 rounded-lg p-6 space-y-4 shadow-xl">
+            <h2 class="text-2xl font-bold mb-4 text-center text-gray-900">Assessment Criteria Checklist</h2>
 
-<script>
-const canvas = document.getElementById("gameCanvas");
-const ctx = canvas.getContext("2d");
+            <div class="flex items-center justify-between bg-gray-50 border-b border-gray-200 py-3 px-2 rounded-md">
+                <div class="flex items-center space-x-3">
+                    <div class="checkbox-square">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/>
+                        </svg>
+                    </div>
+                    <span class="text-lg font-medium text-gray-800">Brushing Teeth <span class="text-sm opacity-80 text-gray-600">(Adaptive Behaviour)</span></span>
+                </div>
+                <button data-game="brushing-teeth" class="play-button bg-blue-600 text-white px-4 py-2 rounded-full font-semibold shadow-md hover:bg-blue-700 hover:scale-105 transition-all duration-300">Play</button>
+            </div>
 
-const background = new Image();
-background.src = "mouth.png";
+            <div class="flex items-center justify-between bg-gray-50 border-b border-gray-200 py-3 px-2 rounded-md">
+                <div class="flex items-center space-x-3">
+                    <div class="checkbox-square">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/>
+                        </svg>
+                    </div>
+                    <span class="text-lg font-medium text-gray-800">Nine-Hole Peg Test <span class="text-sm opacity-80 text-gray-600">(Dexterity Assessment)</span></span>
+                </div>
+                <button data-game="nine-hole-peg" class="play-button bg-blue-600 text-white px-4 py-2 rounded-full font-semibold shadow-md hover:bg-blue-700 hover:scale-105 transition-all duration-300">Play</button>
+            </div>
 
-const brushImage = new Image();
-brushImage.src = "brush.png";
+            <div class="flex items-center justify-between bg-gray-50 border-b border-gray-200 py-3 px-2 rounded-md">
+                <div class="flex items-center space-x-3">
+                    <div class="checkbox-square">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/>
+                        </svg>
+                    </div>
+                    <span class="text-lg font-medium text-gray-800">Stacking Blocks <span class="text-sm opacity-80 text-gray-600">(Developmental Screening)</span></span>
+                </div>
+                <button data-game="stacking-blocks" class="play-button bg-blue-600 text-white px-4 py-2 rounded-full font-semibold shadow-md hover:bg-blue-700 hover:scale-105 transition-all duration-300">Play</button>
+            </div>
 
-const toothbrush = {
-  x: 100,
-  y: 100,
-  width: 40,
-  height: 40,
-  speed: 5
-};
+            <div class="flex items-center justify-between bg-gray-50 border-b border-gray-200 py-3 px-2 rounded-md">
+                <div class="flex items-center space-x-3">
+                    <div class="checkbox-square">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/>
+                        </svg>
+                    </div>
+                    <span class="text-lg font-medium text-gray-800">Story Sequencing Game <span class="text-sm opacity-80 text-gray-600">(Educational Assessment)</span></span>
+                </div>
+                <button data-game="story-sequencing" class="play-button bg-blue-600 text-white px-4 py-2 rounded-full font-semibold shadow-md hover:bg-blue-700 hover:scale-105 transition-all duration-300">Play</button>
+            </div>
 
-const keys = {};
-const plaque = [];
+            <div class="flex items-center justify-between bg-gray-50 py-3 px-2 rounded-md">
+                <div class="flex items-center space-x-3">
+                    <div class="checkbox-square">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/>
+                        </svg>
+                    </div>
+                    <span class="text-lg font-medium text-gray-800">Tracing a Line <span class="text-sm opacity-80 text-gray-600">(Visual Perception)</span></span>
+                </div>
+                <button data-game="tracing-line" class="play-button bg-blue-600 text-white px-4 py-2 rounded-full font-semibold shadow-md hover:bg-blue-700 hover:scale-105 transition-all duration-300">Play</button>
+            </div>
+        </div>
+    </div>
 
-function spawnPlaque(imageData) {
-  for (let i = 0; i < 60; i++) {
-    let tries = 0;
-    while (tries < 1000) {
-      const x = Math.floor(Math.random() * canvas.width);
-      const y = Math.floor(Math.random() * canvas.height);
-      const index = (y * canvas.width + x) * 4;
-      const r = imageData.data[index];
-      const g = imageData.data[index + 1];
-      const b = imageData.data[index + 2];
-      if (r > 200 && g > 200 && b > 200) {
-        plaque.push({ x, y, radius: 10 });
-        break;
-      }
-      tries++;
-    }
-  }
-}
+    <div id="game-overlay" class="game-overlay hidden">
+        <div class="game-overlay-content">
+            <iframe id="game-iframe" class="game-overlay-iframe" src="about:blank"></iframe>
+            <button id="overlay-home-button" class="game-overlay-home-button">
+                Home
+            </button>
+        </div>
+    </div>
 
-function updateToothbrush() {
-  if (keys["w"]) toothbrush.y -= toothbrush.speed;
-  if (keys["s"]) toothbrush.y += toothbrush.speed;
-  if (keys["a"]) toothbrush.x -= toothbrush.speed;
-  if (keys["d"]) toothbrush.x += toothbrush.speed;
+    <script>
+        const playButtons = document.querySelectorAll('.play-button');
+        const gameOverlay = document.getElementById('game-overlay');
+        const gameIframe = document.getElementById('game-iframe');
+        const overlayHomeButton = document.getElementById('overlay-home-button');
 
-  // Keep inside canvas
-  toothbrush.x = Math.max(0, Math.min(canvas.width - toothbrush.width, toothbrush.x));
-  toothbrush.y = Math.max(0, Math.min(canvas.height - toothbrush.height, toothbrush.y));
-}
+        // Mapping of game data-game attribute to their respective URLs
+        const gameUrls = {
+            'stacking-blocks': 'https://boobalootoo.github.io/aandd/blockstacker.html',
+            'nine-hole-peg': 'https://boobalootoo.github.io/aandd/9holepegtest',
+            'brushing-teeth': 'https://boobalootoo.github.io/aandd/plaquebuster1.html',
+            'story-sequencing': 'https://boobalootoo.github.io/aandd/storyboard.html',
+            'tracing-line': 'https://boobalootoo.github.io/aandd/tracing.html'
+        };
 
-function drawToothbrush() {
-  ctx.drawImage(brushImage, toothbrush.x, toothbrush.y, toothbrush.width, toothbrush.height);
-}
+        // Add click event listeners to each play button
+        playButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                const game = button.dataset.game; // Get the game name from the data-game attribute
+                const url = gameUrls[game]; // Get the URL from the mapping
 
-function drawPlaque() {
-  ctx.fillStyle = "green";
-  for (const p of plaque) {
-    ctx.beginPath();
-    ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
-    ctx.fill();
-  }
-}
+                if (url) {
+                    gameIframe.src = url; // Load the external URL into the iframe
+                    gameOverlay.classList.remove('hidden'); // Show the overlay
+                } else {
+                    console.error(`URL not found for game: ${game}`);
+                    // Optionally, display an error message within the iframe or overlay
+                    gameIframe.srcdoc = `
+                        <div style='display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; text-align: center; font-family: "Inter", sans-serif; color: #dc2626; background-color: #fee2e2; border-radius: 0.75rem;'>
+                            <h2 style='font-size: 2rem; font-weight: bold; margin-bottom: 1rem;'>Error Loading Game</h2>
+                            <p style='font-size: 1.1rem; color: #b91c1c;'>The URL for '${formatGameName(game)}' was not found or is invalid.</p>
+                        </div>
+                    `;
+                    gameOverlay.classList.remove('hidden'); // Show overlay even with error
+                }
+            });
+        });
 
-function checkCollisions() {
-  for (let i = plaque.length - 1; i >= 0; i--) {
-    const p = plaque[i];
-    const dx = (toothbrush.x + toothbrush.width / 2) - p.x;
-    const dy = (toothbrush.y + toothbrush.height / 2) - p.y;
-    const dist = Math.sqrt(dx * dx + dy * dy);
-    if (dist < p.radius + toothbrush.width / 2) {
-      plaque.splice(i, 1);
-    }
-  }
-}
+        // Add click event listener for the Home button within the overlay
+        overlayHomeButton.addEventListener('click', () => {
+            gameOverlay.classList.add('hidden'); // Hide the overlay
+            gameIframe.src = 'about:blank'; // Clear the iframe's src to prevent previous content from lingering
+        });
 
-function gameLoop() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  ctx.drawImage(background, 0, 0, canvas.width, canvas.height);
-  updateToothbrush();
-  drawPlaque();
-  drawToothbrush();
-  checkCollisions();
-
-  if (plaque.length === 0) {
-    ctx.fillStyle = "white";
-    ctx.font = "48px sans-serif";
-    ctx.fillText("All Clean!", canvas.width / 2 - 120, canvas.height / 2);
-  } else {
-    requestAnimationFrame(gameLoop);
-  }
-}
-
-// Wait for both images to load
-let imagesLoaded = 0;
-function checkStart() {
-  if (imagesLoaded === 2) {
-    ctx.drawImage(background, 0, 0, canvas.width, canvas.height);
-    const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-    spawnPlaque(imageData);
-    gameLoop();
-  }
-}
-
-background.onload = () => {
-  imagesLoaded++;
-  checkStart();
-};
-
-brushImage.onload = () => {
-  imagesLoaded++;
-  checkStart();
-};
-
-window.addEventListener("keydown", e => keys[e.key.toLowerCase()] = true);
-window.addEventListener("keyup", e => keys[e.key.toLowerCase()] = false);
-</script>
+        // Helper function to format game names for display
+        function formatGameName(name) {
+            return name.split('-').map(word => word.charAt(0).toUpperCase() + word.slice(1)).join(' ');
+        }
+    </script>
 </body>
 </html>
