--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             padding: 0;
             overflow: hidden; /* Prevent scrolling on the main page */
             background-color: #f0f4f8; /* Light background */
+            display: flex; /* Use flexbox for split screen */
+            height: 100vh; /* Full viewport height */
         }
         /* Custom styles for the pixel-art like checkbox */
         .checkbox-square {
@@ -30,41 +32,27 @@
             width: 18px;
             height: 18px;
         }
-        /* Styles for the game overlay */
-        .game-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
+        /* Styles for the game container within the left panel */
+        .left-game-container {
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black background */
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            z-index: 1000; /* Ensure it's on top of other content */
-            padding: 2rem; /* Add some padding around the content */
-        }
-        .game-overlay-content {
             background-color: #ffffff;
             border-radius: 1rem;
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-            width: 95%; /* Adjust width for responsiveness */
-            max-width: 1200px; /* Max width for larger screens */
-            height: 95%; /* Adjust height for responsiveness */
-            max-height: 800px; /* Max height for larger screens */
-            display: flex;
-            flex-direction: column;
-            overflow: hidden; /* Hide overflow from iframe */
+            padding: 1rem;
         }
-        .game-overlay-iframe {
+        .left-game-iframe {
             width: 100%;
             flex-grow: 1; /* Allow iframe to take available height */
             border: none;
             border-radius: 0.75rem; /* Rounded corners for the iframe */
             background-color: #f0f4f8; /* Background for the iframe area */
         }
-        .game-overlay-home-button {
+        .left-game-home-button {
             margin-top: 1rem;
             padding: 0.75rem 2rem;
             background-color: #ef4444; /* Red color for home button */
@@ -74,15 +62,21 @@
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
             transition: background-color 0.3s ease, transform 0.3s ease;
         }
-        .game-overlay-home-button:hover {
+        .left-game-home-button:hover {
             background-color: #dc2626;
             transform: scale(1.05);
         }
+        /* Specific styling for the right side game iframe */
+        #right-game-iframe {
+            border-radius: 0.75rem; /* Match other rounded corners */
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); /* Subtle shadow */
+        }
     </style>
 </head>
-<body class="flex h-screen items-center justify-center">
-    <div class="w-full max-w-2xl mx-auto p-8 bg-emerald-100 text-gray-800 flex flex-col items-center justify-between shadow-lg rounded-3xl h-full py-12">
-        <div class="w-full bg-white border-4 border-gray-800 rounded-lg p-6 space-y-4 shadow-xl">
+<body>
+    <div class="w-1/2 p-8 bg-emerald-100 text-gray-800 flex flex-col items-center justify-center shadow-lg rounded-r-3xl">
+
+        <div id="checklist-view" class="w-full max-w-lg bg-white border-4 border-gray-800 rounded-lg p-6 space-y-4 shadow-xl">
             <h2 class="text-2xl font-bold mb-4 text-center text-gray-900">Assessment Criteria Checklist</h2>
 
             <div class="flex items-center justify-between bg-gray-50 border-b border-gray-200 py-3 px-2 rounded-md">
@@ -145,22 +139,26 @@
                 <button data-game="tracing-line" class="play-button bg-blue-600 text-white px-4 py-2 rounded-full font-semibold shadow-md hover:bg-blue-700 hover:scale-105 transition-all duration-300">Play</button>
             </div>
         </div>
-    </div>
 
-    <div id="game-overlay" class="game-overlay hidden">
-        <div class="game-overlay-content">
-            <iframe id="game-iframe" class="game-overlay-iframe" src="about:blank"></iframe>
-            <button id="overlay-home-button" class="game-overlay-home-button">
+        <div id="minigame-view" class="left-game-container hidden">
+            <iframe id="game-iframe" class="left-game-iframe" src="about:blank"></iframe>
+            <button id="left-side-home-button" class="left-game-home-button">
                 Home
             </button>
         </div>
     </div>
 
+    <div class="w-1/2 p-8 bg-gray-200 flex items-center justify-center rounded-l-3xl">
+        <iframe id="right-game-iframe" src="https://boobalootoo.github.io/aandd/fullflightgame" class="w-full h-full border-none rounded-l-3xl shadow-lg"></iframe>
+    </div>
+
     <script>
         const playButtons = document.querySelectorAll('.play-button');
-        const gameOverlay = document.getElementById('game-overlay');
+        const checklistView = document.getElementById('checklist-view');
+        const minigameView = document.getElementById('minigame-view');
         const gameIframe = document.getElementById('game-iframe');
-        const overlayHomeButton = document.getElementById('overlay-home-button');
+        const leftSideHomeButton = document.getElementById('left-side-home-button');
+        const rightGameIframe = document.getElementById('right-game-iframe');
 
         // Mapping of game data-game attribute to their respective URLs
         const gameUrls = {
@@ -174,50 +172,59 @@
         // Add click event listeners to each play button
         playButtons.forEach(button => {
             button.addEventListener('click', () => {
-                const game = button.dataset.game; // Get the game name from the data-game attribute
-                const url = gameUrls[game]; // Get the URL from the mapping
+                const game = button.dataset.game;
+                const url = gameUrls[game];
 
                 if (url) {
-                    gameIframe.src = url; // Load the external URL into the iframe
-                    gameOverlay.classList.remove('hidden'); // Show the overlay
+                    gameIframe.src = url;
+                    checklistView.classList.add('hidden'); // Hide the checklist
+                    minigameView.classList.remove('hidden'); // Show the minigame view
 
                     // Add a load listener to the iframe to focus it once content is loaded
                     gameIframe.onload = () => {
                         try {
-                            // Attempt to focus the iframe's content window
                             gameIframe.contentWindow.focus();
                             console.log(`Iframe for ${formatGameName(game)} focused.`);
                         } catch (e) {
                             console.warn(`Could not focus iframe for ${formatGameName(game)}. Cross-origin restrictions or browser policies might apply.`, e);
-                            // Fallback: Inform user if focus isn't possible
-                            // You might want to add a visible message to the user here
                         }
                     };
                 } else {
                     console.error(`URL not found for game: ${game}`);
-                    // Display an error message within the iframe
                     gameIframe.srcdoc = `
                         <div style='display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; text-align: center; font-family: "Inter", sans-serif; color: #dc2626; background-color: #fee2e2; border-radius: 0.75rem;'>
                             <h2 style='font-size: 2rem; font-weight: bold; margin-bottom: 1rem;'>Error Loading Game</h2>
                             <p style='font-size: 1.1rem; color: #b91c1c;'>The URL for '${formatGameName(game)}' was not found or is invalid.</p>
                         </div>
                     `;
-                    gameOverlay.classList.remove('hidden'); // Show overlay even with error
+                    checklistView.classList.add('hidden'); // Still hide checklist
+                    minigameView.classList.remove('hidden'); // Still show minigame view with error
                 }
             });
         });
 
-        // Add click event listener for the Home button within the overlay
-        overlayHomeButton.addEventListener('click', () => {
-            gameOverlay.classList.add('hidden'); // Hide the overlay
-            gameIframe.src = 'about:blank'; // Clear the iframe's src to prevent previous content from lingering
-            gameIframe.onload = null; // Remove the onload listener to prevent it from firing on about:blank
+        // Add click event listener for the Home button within the left side minigame view
+        leftSideHomeButton.addEventListener('click', () => {
+            minigameView.classList.add('hidden'); // Hide the minigame view
+            checklistView.classList.remove('hidden'); // Show the checklist
+            gameIframe.src = 'about:blank'; // Clear the iframe's src
+            gameIframe.onload = null; // Remove the onload listener
         });
 
         // Helper function to format game names for display
         function formatGameName(name) {
             return name.split('-').map(word => word.charAt(0).toUpperCase() + word.slice(1)).join(' ');
         }
+
+        // Optional: Focus the right game iframe when it loads to ensure it's ready for input
+        rightGameIframe.onload = () => {
+            try {
+                rightGameIframe.contentWindow.focus();
+                console.log('Right game iframe focused on load.');
+            } catch (e) {
+                console.warn('Could not focus right game iframe. Cross-origin restrictions or browser policies might apply.', e);
+            }
+        };
     </script>
 </body>
 </html>
